[package]
name = "auth-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sutegi auth demo: register/login/logout with signed-cookie sessions, an admin group, and API tokens guarding an agent-facing group."
publish = false

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
# `auth-mail` (users/sessions/guards/tokens + verification/reset emails) +
# `sqlite` for the single-node store. MAIL_DRIVER=log by default: links print
# to stderr; point MAIL_DRIVER=smtp + MAIL_SMTP_ADDR=localhost:1025 at Mailpit
# to see real messages.
sutegi = { path = "../../crates/sutegi", default-features = false, features = ["auth-mail", "sqlite"] }
